# progetto-gpo

./: .dotenv  .gitignore  Cargo.toml  README.md  account.sql
client/: .gitignore  Cargo.toml  Dioxus.toml
glossary/: 1 - Test.json  2 - Test 2.json  3 - Test 3.json  4 - Test 4.json  5 - Test 5.json  6 - Test 6.json  7 - Test 7.json  8 - Test 8.json  appendix-00.html  appendix-01-keywords.html  appendix-02-operators.html  appendix-03-derivable-traits.html  appendix-04-useful-development-tools.html  appendix-06-translation.html  ch00-00-introduction.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-hello-cargo.html  ch02-00-guessing-game-tutorial.html  ch03-01-variables-and-mutability.html  ch03-02-data-types.html  ch03-03-how-functions-work.html  ch03-04-comments.html  ch03-05-control-flow.html  ch04-00-understanding-ownership.html  ch04-01-what-is-ownership.html  ch04-02-references-and-borrowing.html  ch04-03-slices.html  ch05-01-defining-structs.html  ch05-02-example-structs.html  ch05-03-method-syntax.html  ch06-00-enums.html  ch06-01-defining-an-enum.html  ch06-02-match.html  ch06-03-if-let.html  ch07-00-managing-growing-projects-with-packages-crates-and-modules.html  ch07-01-packages-and-crates.html  ch07-02-defining-modules-to-control-scope-and-privacy.html  ch07-03-paths-for-referring-to-an-item-in-the-module-tree.html  (+61 more)
src/: error.rs  index.html  login.html  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/helpers/: navbar.html
src-tauri/migrations/: 20241219000523_test.sql
src-tauri/src/: error.rs  lib.rs  main.rs
(+97 files in other folders)
