[package]
name = "progetto-gpo"
version = "0.1.0"
authors = ["ARGENTOS72 <maceiratomas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
surrealdb = "2.1.4"
thiserror = "2.0.11"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
