[package]
name = "progetto-gpo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "progetto_gpo_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.3"
once_cell = "1.20.2"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
futures = "0.3.31"
env_logger = "0.11.5"
log = "0.4.22"
surrealdb = "2.1.4"
dotenv = "0.15.0"
